
- work in progress:
	pack() unpack() (Java) by Bas Appelo

	module-level compilation for perlito5.pl (Perl5)

	utf8 support (Java)

	BEGIN blocks (parser)

- Parser:
-- Implemented compile-time scratchpad, used in BEGIN blocks.
-- "Use" is no longer an AST node, because all "use" statements
    are executed at compile-time

- JavaScript:
-- fix "range" special cases

- Java:
-- "Encode.pm" encode_utf8, decode_utf8
-- "Scalar::Util", "List::Util" ports.
-- BEGIN block fixes - "Exporter" works.
-- INIT and END blocks
-- "$$" variable (process id)
-- mkdir(), rmdir()
-- pack (a..X, @ and . with number working)
-- unpack (a,A,Z with number working)
-- splice()
-- optimize "for (0..1000000)"
-- s///e, tr//
-- glob deref - *{ $name }{CODE}->()
-- regex comments with "(?#text)"
-- regex modifiers /e /g /c
-- support for all primitive data types

0.047 cpan:v6  2016-07-28
- hide internal classes from CPAN index

9.021 cpan:Perlito5  2016-05-10
- JavaScript:
-- state variables by Yati Sagade
- Java:
-- state variables by Yati Sagade
-- open(), close(), readline(), read(), sysread(), getc()
-- regex variables $1, $2, $&, pos()

9.020 cpan:Perlito5  2016-05-02
- Parser:
-- "->@*" support
-- new namespaces for modules that require backend-specific implementations:
    lib/Perlito5X/Java/ and lib/Perlito5X/JavaScript/
    and configuration modules:
    lib/Perlito5/Java/Lib.pm and lib/Perlito5/JavaScript/Lib.pm
- Java:
-- '&subr', '&subr()', '\&subr' idioms
-- '*name = \&subr' idiom
-- sprintf(), printf(), fc()
-- increment/decrement operations on native types
-- support for primitive data types, work in progress: "byte", "short"

9.019 cpan:Perlito5  2016-04-10
- Java:
-- pure-typed expressions, see: misc/benchmark/benchmark_typed.pl
-- support for primitive data types, work in progress: "long", "int"
    see: misc/benchmark/benchmark_typed_primitive.pl

9.018 cpan:Perlito5  2016-03-02
- Docs:
-- new documentation file "README-howto-release.md"
- Java: